Versão Final da monografia

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -22,6 +22,15 @@
   year={2007},
   publisher={ACS Publications}
 }
+@article{kohavi1998glossary,
+  title={Glossary of terms},
+  author={Kohavi, Ron and Provost, Foster},
+  journal={Machine Learning},
+  volume={30},
+  number={2-3},
+  pages={271--274},
+  year={1998}
+}
 @article{huang2008localized,
   title={Localized co-occurrence model for fast approximate search in 3D structure databases},
   author={Huang, Zi and Shen, Heng Tao and Zhou, Xiaofang},
