--- a/conteudo/conclusao.tex
+++ b/conteudo/conclusao.tex
@@ -1,13 +1,15 @@
 \chapter{Considerações Finais}
 \label{chap:conclusao}
 
-O presente trabalho é fruto de um projeto de iniciação científica desenvolvido em uma parceria entre o Laboratório de Computação de Alto Desempenho(\sigla{LACAD}{Laboratório de Computação de Alto Desempenho}) e o Laboratório de Modelagem Molecular (\sigla{LMM}{Laboratório de Modelagem Molecular}) da UEFS, no qual foi proposto o estudo e implementação de um algoritmo para o sistema NatProDB visando possibilitar ao sistema a realização de uma triagem virtual de moléculas a partir do conceito de similaridade molecular. O sistema desenvolvido neste trabalho  permite aos pesquisadores construírem localmente suas próprias bases de dados, e selecionar dentro do seu banco moléculas similares aos ligantes de seu interesse para realização de estudos. 
+O presente trabalho é fruto da parceria entre o Laboratório de Computação de Alto Desempenho(\sigla{LACAD}{Laboratório de Computação de Alto Desempenho}) e o Laboratório de Modelagem Molecular (\sigla{LMM}{Laboratório de Modelagem Molecular}) da UEFS, no qual foi proposto o estudo e implementação de um algoritmo para o sistema NatProDB visando possibilitar ao mesmo a realização de uma triagem virtual de moléculas (Virtual Screening) no seu banco baseada no conceito de similaridade molecular. O sistema juntamente com o algoritmo adaptado neste trabalho  permite aos pesquisadores construírem localmente suas próprias bases de dados de moléculas, e selecionar dentro do seu banco moléculas similares aos ligantes de seu interesse para realização de estudos. 
 
-A aplicação de uma abordagem de comparação de moléculas 2D proposta neste trabalho simplifica  a computação de similaridade molecular, uma vez que, permite a utilização de descritores moleculares lineares como as fingerprints, e também a aplicação de técnicas de comparação como o Coeficiente de Tversky ou até mesmo o Coeficiente de Tanimoto, que calculam a similaridade entre estruturas através da contagem de características/grupos funcionais presentes em cada molécula. Entretanto, tal modelo sofre de algumas limitações a serem consideradas, como por exemplo: a variação de conformações de uma dada molécula podem gerar coeficientes de similaridade altos somente para determinadas conformações, ou seja, mesmo compartilhando uma estrutura molecular parecida, as moléculas são similares somente para alguns estados conformacionais \cite{rodrigues2012}. Além disso, por se tratar de uma comparação baseada em contagem de características e avaliação estrutural das moléculas, questões como rotações, propriedades intrínsecas de alguns compostos, e até mesmo átomos quirais, não são tratadas pelo algoritmo implementado no sistema, o que pode ocasionar obtenção de índices de similaridade altos entre duas estruturas que não necessariamente possuem atividades biológicas semelhantes. Tais deficiências podem ser solucionadas através da utilização de abordagens híbridas que além da comparação estrutural 2D, consideram propriedades intrínsecas de cada composto obtidas via processamento de descritores 3D, mas que não necessariamente podem ser estendidos  como solução para todos os possíveis casos.
+A aplicação de uma abordagem de comparação de moléculas 2D proposta neste trabalho simplifica  a computação de similaridade molecular, uma vez que permite a utilização de descritores moleculares lineares como as fingerprints, e também a aplicação de técnicas de comparação como o Coeficiente de Tversky ou até mesmo o Coeficiente de Tanimoto, que calculam a similaridade entre estruturas através da contagem de características/grupos funcionais presentes em cada molécula. 
+O método implementado no NatProDB é uma abordagem bastante difundida na literatura, e já vem sendo utilizada inclusive por sistemas consolidados na comunidade científica como o PubChem por exemplo. Além disso, devido a escassez de ferramentas gratuitas que se proponham a fornecer um ambiente computacional onde o pesquisador possa controlar e gerenciar as suas moléculas, assim como realizar triagem em bancos locais através do conceito de similaridade molecular, o sistema desenvolvido surge como uma ferramenta para auxiliar esses pesquisadores desenvolverem seus estudos e até mesmo criarem  base de dados com estruturas de sua propriedade para posterior publicação.
 
-Apesar das limitações citadas anteriormente, o método implementado no NatProDB é uma abordagem bastante difundida na literatura, e já vem sendo utilizada inclusive por sistemas consolidados na comunidade científica como o PubChem por exemplo. Além disso, devido a escassez de ferramentas gratuitas que se proponham a fornecer um ambiente computacional onde o pesquisador possa controlar e gerenciar as suas moléculas, assim como realizar triagem em bancos locais através do conceito de similaridade molecular, o sistema desenvolvido surge como uma ferramenta para auxiliar esses pesquisadores desenvolverem seus estudos e até mesmo criarem  base de dados com estruturas de sua propriedade para posterior publicação.
+Embora o sistema NatProDB já venha sendo utilizado por pesquisadores do LMM, esse projeto evoluiu de forma a abarcar não somente o estudo de estruturas moleculares localmente, mas também permitir a difusão das moléculas oriundas do semi-árido para a comunidade científica em geral através da internet. Nesse sentido, recentemente foi criado um ambiente web para o NatProDB, que fornece a possibilidade de acesso a um catálogo de moléculas extraídas de fontes naturais endêmicas oriundas do bioma semi-árido através da internet.
 
-Embora o sistema NatProDB já venha sendo utilizado por pesquisadores do LMM, esse projeto evoluiu de forma a abarcar não somente o estudo de estruturas moleculares localmente, mas também permitir a difusão das moléculas oriundas do semi-árido baiano para a comunidade científica em geral. Nesse sentido, recentemente foi criado um ambiente web para o NatProDB, que fornece a possibilidade de acesso a um catalogo de moléculas extraídas de fontes naturais endêmicas do oriundas  do bioma semi-árido. Como próximos passos deste projeto, o grupo pretende adaptar o algorítimo implementado no sistema local também na versão web, assim como adaptar métodos de comparação de estruturas em 3D visando assim suprir algumas das deficiências citadas anteriormente.     
+Devido ao fato do algoritmo implementado no NatProDB realizar uma comparação baseada em contagem de características/grupos funcionais e avaliação estrutural das moléculas, questões como rotações, propriedades intrínsecas de alguns compostos, e até mesmo átomos quirais, não são tratadas pelo algoritmo implementado no sistema, o que pode ocasionar obtenção de índices de similaridade altos entre duas estruturas que não necessariamente possuem atividades biológicas semelhantes. Dessa maneira, visando solucionar tal problema, será implementado posteriormente no sistema tanto local quanto web, algoritmos que realize a computação de similaridade molecular através de descritores moleculares 3D, visando assim permitir que o sistema não somente compare moléculas baseados nas suas características estruturais, mas que também leve em consideração as propriedades intrínsecas e particularidades dos compostos.
+  
      
 
   
