--- a/conteudo/metodologia.tex
+++ b/conteudo/metodologia.tex
@@ -1,10 +1,8 @@
 
 \chapter{Metodologia}
 \label{chap:metodo}
-Neste capítulo será apresentado os métodos e ferramentas aplicados no
-desenvolvimento e implementação do algoritmo a ser adaptado no NatProDB. Também será
-apresentado a metodologia dos testes realizados sobre o algoritmo escolhido para adaptação ao
-NatProDB.
+Neste capítulo serão apresentados os métodos e ferramentas aplicados no
+desenvolvimento e implementação do algoritmo que foi adaptado no NatProDB, e a metodologia dos testes realizados sobre o algoritmo adaptado no sistema.
 
 \section{FERRAMENTAS UTILIZADAS PARA IMPLEMENTAÇÃO}
 
@@ -12,18 +10,18 @@ Tanto o módulo de gerenciamento de banco de dados do sistema NatProDB, assim co
 
 \section{ALGORITMO E MÉTRICA PARA CÁLCULO DE SIMILARIDADE NO NATPRODB}
 
- Conforme já discutido na seção 2.2, a escolha do descritor molécular a ser utilizado é um ponto chave para decisão sobre que algoritmo/métrica melhor se adequa para comparação de similaridade entre moléculas \cite{todeschini2008handbook}. Nesta perspectiva, o sistema NatProDB utiliza dois descritores moleculares para realizar cálculo de similaridade molecular: SMILES, e Fingerprint. Os SMILES são utilizados para armazenar no banco de dados do sistema a estrutura física das moléculas devido a sua simplicidade na representação da molécula em formato 2D e também baixo custo computacional para armazenamento das características estruturais dos compostos. Os SMILES do ligante (estrutura de interesse do pesquisador) e das moléculas presentes no banco de dados do NatProDB são utilizadas na fase de pré-processamento das estruturas, onde as mesmas são preparadas para posterior comparação de similaridade. Nesta fase, devido ao fato de existirem diversos métodos para geração de SMILES para uma molécula \cite{kumar2012}, visando evitar possíveis distorções nos resultados da comparação de similaridade entre as estruturas, tanto o SMILES do ligante quanto os SMILES das moléculas presentes no banco passam por um processamento de canonização, que basicamente re-organiza o SMILES de forma a garantir que todos os SMILES do sistema sejam obtidos seguindo o mesmo padrão de geração \cite{kumar2012}, obtendo assim estruturas únicas para cada uma das moléculas do sistema. Tal canonização é realizada no sistema pela biblioteca indigo toolkit, que implementa algoritmo para obtenção de SMILES únicos conforme descrito por Pavlov (2011).
+ Conforme já discutido na seção 2.2, a escolha do descritor molecular a ser utilizado é um ponto chave para decisão sobre que algoritmo/métrica melhor se adequa para comparação de similaridade entre moléculas \cite{todeschini2008handbook}. Nesta perspectiva, o sistema NatProDB utiliza dois descritores moleculares para realizar cálculo de similaridade molecular: SMILES e Fingerprint. Os SMILES são utilizados para armazenar no banco de dados do sistema a estrutura física das moléculas devido a sua simplicidade na representação da molécula em formato 2D e também baixo custo computacional para armazenamento das características estruturais dos compostos. Os SMILES do ligante (estrutura de interesse do pesquisador) e das moléculas presentes no banco de dados do NatProDB são utilizadas na fase de pré-processamento das estruturas, na qual as mesmas são preparadas para posterior comparação de similaridade. Nesta fase, devido ao fato de existirem diversos métodos para geração de SMILES para uma molécula \cite{kumar2012}, visando evitar possíveis distorções nos resultados da comparação de similaridade entre as estruturas, tanto o SMILES do ligante quanto os SMILES das moléculas presentes no banco passam por um processamento de canonização, que basicamente re-organiza o SMILES de forma a garantir que todos os SMILES do sistema sejam obtidos seguindo o mesmo padrão de geração \cite{kumar2012}, obtendo assim estruturas únicas para cada uma das moléculas do sistema. Tal canonização é realizada no sistema pela biblioteca Indigo toolkit, que implementa algoritmo para obtenção de SMILES únicos conforme descrito por Pavlov (2011).
 
-Uma vez obtidas os SMILES canônicos das moléculas, o sistema NatProDB realiza uma conversão    
-desses SMILES para outro descritor molecular, no caso Fingerprints. Apesar da existência de metodologias de comparação de similaridade baseadas nos SMILES, como por exemplo o LINGO \cite{vidal2005lingo}, as fingerprints se mostram mais populares na literatura para realização de comparação de similaridade entre moléculas \cite{varnek2011fragment}. Primeiramente, devido a forma como a fingerprint codifica a estrutura molecular e as características intrínsecas de cada composto (sequencia binária) favorece a aplicação de métricas de similaridade já difundidas na comunidade científica como: Coeficiente de Tanimoto, e Coeficiente de Tversky \cite{willett2003similarity}. Além disso, a utilização das Fingerprints para comparação de similaridade molecular, reduz a computação de similaridade entre duas moléculas a contagem e comparação de bits '1' presentes em cada uma das estruturas. Dessa maneira, para realizar  a conversão dos SMILES das moléculas para Fingerprint, o sistema NatProDB utiliza a biblioteca indigo toolkit, que implementa uma rotina para  realizar tal conversão, finalizando assim o pré-processamento das estruturas para aplicação de métrica de similaridade adotada para o sistema.
+Uma vez obtidos os SMILES canônicos das moléculas, o sistema NatProDB realiza uma conversão    
+desses SMILES para outro descritor molecular, no caso Fingerprints. Apesar da existência de metodologias de comparação de similaridade baseadas nos SMILES, como por exemplo o LINGO \cite{vidal2005lingo}, as fingerprints se mostram mais populares na literatura para realização de comparação de similaridade entre moléculas \cite{varnek2011fragment}. Primeiramente, devido a forma como a fingerprint codifica a estrutura molecular e as características intrínsecas de cada composto (sequencia binária) favorece a aplicação de métricas de similaridade já difundidas na comunidade científica como: Coeficiente de Tanimoto, e Coeficiente de Tversky \cite{willett2003similarity}. Além disso, a utilização desse  descritor molecular, permite que a comparação de similaridade entre moléculas seja realizada através da contagem e comparação das estruturas/grupos funcionais presentes em suas estruturas (bits da fingerprint definidos como valor 1). Dessa maneira, para realizar  a conversão dos SMILES das moléculas para Fingerprint, o sistema NatProDB utiliza a biblioteca Indigo toolkit, que implementa uma rotina para  realizar tal conversão, finalizando assim o pré-processamento das estruturas para aplicação de métrica de similaridade adotada para o sistema.
 
 A partir das fingerprints obtidas no pré-processamento das estruturas, o algorítmo implementado no sistema NatProDB segue o método descrito nas seção 2.3.1.1 para comparação de similaridade entre moléculas. Basicamente, é realizada a contagem de características em comum e distintas entre as fingerprints de entrada (ligante) e as fingerprints das moléculas do banco, e então aplicada uma métrica para obtenção do coeficiente de similaridade. Diferentemente do método descrito na seção 2.3.1.1, ao invés de utilizar o coeficiente de Tanimoto  descrito na equação (\ref{eq:Tanimoto}) como métrica de similaridade para realização da triagem em seu banco de dados, o NatProDB utiliza o coeficiente de Tversky. Tal escolha é orientada pelo fato deste coeficiente de permitir o favorecimento das características presentes na fingerprint de uma moléculas em detrimento da outra através da introdução dos parâmetros $\alpha$ e $\beta$ na equação (\ref{eq:Tversky}). Através do aumento e diminuição dos parâmetros $\alpha$ e $\beta$, o sistema NatProDB consegue flexibilizar seu método para comparação de similaridade, permitindo assim a comparação não somente de similaridade molecular, mas também a busca de super-estruturas e/ou subestruturas de acordo com os valores selecionados para esses coeficientes. Assim como na etapa de pré-processamento das moléculas, a computação da similaridade entre estruturas através do coeficiente de Tversky é realizado também pela indigo toolkit, que possui uma rotina chamada \textit{similarity}(), que recebe como parâmetro duas fingerprints, e o tipo de coeficiente a ser aplicado (Coeficiente de Tversky para o caso do NatProDB), e retorna para o sistema o grau de similaridade entre as duas fingerprints. Este método é aplicado serialmente entre a molécula de entrada (ligante) e cada uma das moléculas cadastrada no banco de dados do sistema, retornando para o pesquisador somente as moléculas cujo coeficiente de Tversky encontrado é superior ao grau de similaridade selecionado previamente pelo pesquisador.  
 
-\section{TESTES}
+\section{EXPERIMENTOS}
 
-Para realização dos testes no sistema, foram selecionados 7 moléculas-alvo  com estruturas moleculares diversificadas entre si, sendo elas: Acetaminophen, Fluoxetina, Glyburide, Imatinib, Isosorbid, Vinblastine, Propranolol. Todas moléculas citadas já são distribuídas para o mercado como fármacos, ou seja substâncias que contem estruturas que possibilitam sua absorção e metabolização pelo corpo humano. Visando criar um banco controlado para os testes, foram baixadas 47458 moléculas de um banco molecular colaborativo disponibilizado pelo ZINC \cite{irwin2005zinc} para o banco local do NatProDB. Para garantir que não existia moléculas com grau de similaridade superior a 0.8 ou 80\% às moléculas-alvo, foram realizadas consultas nesse banco colaborativo através do ZINC buscando estruturas com grau de similaridade superior a 80\% ou 0.8 para cada uma das moléculas selecionadas para teste. A escolha do coeficiente de similaridade de 0.8 ou 80\% como limiar foi baseada no trabalho de Drogra(2007) que afirma que estruturas com coeficiente de similaridade superior ou igual a 0,85 podem ser consideradas similares. Para cada uma dessas 7 consultas o ZINC não retornou nenhuma molécula 80\% similar ou com grau de similaridade superior às moléculas alvo. Após populado o banco de dados do NatProDB, foram enxertados nesse banco local: 50 moléculas com grau de similaridade $\geq $ 0.8 ou $\geq $80\% ao acetaminophen, 50 moléculas com grau de similaridade $\geq $ 0.8 ou $\geq $80\% à fluoxetina, 50 moléculas com grau de similaridade $\geq $0.8 ou $\geq $80\% ao Glyburide, 50 moléculas com grau de similaridade $\geq $ 0.8 ou $\geq $80\% ao Imatinib, 34 moléculas com grau de similaridade $\geq $ 0.8 ou $\geq $80\% ao Isosorbid, 50 moléculas com grau de similaridade $\geq $0.8 ou $\geq $80\% ao Vinblastine, 50 moléculas com grau de similaridade $\geq $0.8 ou $\geq $80\% ao Propranolol. Todas essas estruturas foram extraídas do PUBCHEM \cite{li2010pubchem}, que além de implementar algoritmo para recuperação de moléculas baseado no conceito de similaridade, permite o download dessas estruturas em formato .smi, que é um formato já aceito pelo NatProDB para importação de moléculas.
+Para realização dos testes no sistema, foram selecionados 7 moléculas-alvo  com estruturas moleculares diversificadas entre si, sendo elas: Acetaminophen, Fluoxetina, Glyburide, Imatinib, Isosorbid, Vinblastine, Propranolol. Todas moléculas citadas já são distribuídas para o mercado como fármacos, ou seja substâncias que contem estruturas que possibilitam sua absorção e metabolização pelo corpo humano. Visando criar um banco controlado para os testes, foram baixadas 47458 moléculas de um banco molecular colaborativo disponibilizado pelo ZINC \cite{irwin2005zinc} para o banco local do NatProDB. Para garantir que não existia moléculas com grau de similaridade superior a 80\% às moléculas-alvo, foram realizadas consultas nesse banco colaborativo através do ZINC buscando estruturas com grau de similaridade superior a 80\% para cada uma das moléculas selecionadas para teste. A escolha do coeficiente de similaridade de 80\% como limiar foi baseada no trabalho de Drogra(2007) que afirma que estruturas com coeficiente de similaridade superior ou igual a 0,85 podem ser consideradas similares. Para cada uma dessas 7 consultas o ZINC não retornou nenhuma molécula 80\% similar ou com grau de similaridade superior às moléculas alvo. Após populado o banco de dados do NatProDB, foram enxertados nesse banco local: 50 moléculas com grau de similaridade $\geq $80\% ao acetaminophen, 50 moléculas com grau de similaridade $\geq $80\% à fluoxetina, 50 moléculas com grau de similaridade $\geq $80\% ao Glyburide, 50 moléculas com grau de similaridade $\geq $80\% ao Imatinib, 34 moléculas com grau de similaridade $\geq $80\% ao Isosorbid, 50 moléculas com grau de similaridade $\geq $80\% ao Vinblastine, 50 moléculas com grau de similaridade $\geq $80\% ao Propranolol. Todas essas estruturas foram extraídas do PUBCHEM \cite{li2010pubchem}, que além de implementar algoritmo para recuperação de moléculas baseado no conceito de similaridade, permite o download dessas estruturas em formato .smi, que é um formato já aceito pelo NatProDB para importação de moléculas.
 
-Após a população do banco de dados do NatProDB foram repetidas no sistema as mesmas 7 consultas realizadas no ZINC, visando assim validar o método implementado para computação de similaridade molecular verificando se o algoritmo aplicado consegue recuperar para cada uma das moléculas-alvo, as moléculas 80\% ou 0.8 similares as mesmas dentro do conjunto de moléculas do banco. Os resultados obtidos em cada uma das 7 consultas realizadas no NatProDB foram avaliados através de uma adaptação da matriz de confusão, que apesar de ser mais frequentemente utilizada para medição da qualidade de classificadores (principalmente na inteligência artificial) através da comparação do número de classificações corretas(obtidas por testes no classificador) \textit{versus} classificações preditas de uma determinada classe (obtidas por análise de modelo de referência) \cite{davis2006relationship}. Para o contexto dos testes realizados no NatProDB, esse conceito foi adaptado para medir a qualidade do método implementado em classificar as estruturas 80\% ou 0.8 similares a cada uma das moléculas-alvos utilizadas como entradas para o sistema. Dessa maneira as moléculas preditas $\geq$ 0.8 similares e $\leq$ 0.8 similares correspondem respectivamente: moléculas-alvo extraídas do PUBCHEM, e moléculas presentes no banco colaborativo disponibilizado pelo ZINC.
+Após a população do banco de dados do NatProDB foram repetidas no sistema as mesmas 7 consultas realizadas no ZINC, visando assim validar o método implementado para computação de similaridade molecular verificando se o algoritmo aplicado consegue recuperar para cada uma das moléculas-alvo, as moléculas 80\% similares as mesmas dentro do conjunto de moléculas do banco. Os resultados obtidos em cada uma das 7 consultas realizadas no NatProDB foram avaliados através de uma adaptação da matriz de confusão, que apesar de ser mais frequentemente utilizada para medição da qualidade de classificadores (principalmente na inteligência artificial) através da comparação do número de classificações corretas(obtidas por testes no classificador) \textit{versus} classificações preditas de uma determinada classe (obtidas por análise de modelo de referência) \cite{davis2006relationship}. Para o contexto dos testes realizados no NatProDB, esse conceito foi adaptado para medir a qualidade do método implementado em classificar as estruturas 80\% similares a cada uma das moléculas-alvos utilizadas como entradas para o sistema. Dessa maneira as moléculas preditas $\geq$ 80\% similares e $\leq$ 80\% similares correspondem respectivamente: moléculas-alvo extraídas do PUBCHEM, e moléculas presentes no banco colaborativo disponibilizado pelo ZINC.
 
 \begin{table}[!htb]
 	\centering
@@ -39,7 +37,7 @@ Após a população do banco de dados do NatProDB foram repetidas no sistema as 
 	\fonte{Pr\'oprio Autor.}
 \end{table}  
 
-A partir da tabela (\ref{tab:matrizconfusao}), podemos  a partir dos valores de $V_P$, $V_N$, $F_P$, e $F_N$, derivar algumas métricas comumente utilizadas para medir a qualidade do classificador implementado como: Acurácia (\ref{eq:Acuracia}), Sensibilidade(\ref{eq:Sensibilidade}), Especificidade(\ref{eq:Especificidade}), Precisão (\ref{eq:Precisao}), F-Medida (\ref{eq:FMedida}), e a porcentagem de amostras erroneamente classificadas como positivas dentre todas verdadeiramente negativas (\sigla{FPR}{porcentagem de amostras erroneamente classificadas como positivas dentre todas as verdadeiramente negativas}) \eqref{eq:FPR}. 
+A partir da tabela (\ref{tab:matrizconfusao}), podemos  a partir dos valores de $V_P$, $V_N$, $F_P$, e $F_N$, derivar algumas métricas comumente utilizadas para medir a qualidade do classificador implementado como: Acurácia (\ref{eq:Acuracia}) que indica a proporção de predições corretas (Verdadeiras e negativas); Sensibilidade(\ref{eq:Sensibilidade}) que é um indicador da capacidade do sistema em identificar verdadeiros positivos quando as amostras verdadeiramente atendem a uma dada condição; Especificidade(\ref{eq:Especificidade}) que indica a capacidade do sistema em identificar verdadeiros negativos quando as amostras verdadeiramente não atendem a uma dada condição; Precisão (\ref{eq:Precisao}) que indica a porcentagem de amostras classificadas corretamente como positivas dentre todas classificadas como positivas; F-Medida (\ref{eq:FMedida}) que é uma média ponderada entre a sensibilidade e a precisão; Porcentagem de amostras erroneamente classificadas como positivas dentre todas verdadeiramente negativas (\sigla{FPR}{porcentagem de amostras erroneamente classificadas como positivas dentre todas as verdadeiramente negativas}) \eqref{eq:FPR} \cite{kohavi1998glossary}. 
 
 \begin{equation}
 Acur\acute{a}cia =\frac{\textrm{\textit{Total de Acertos}}}{\textrm{\textit{Total de Dados no Conjunto}}} \\
